Added change to index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>c0rn3d</h1>
         <p>Web Developer | Designer | Enthusiast</p>
     </header>
     
@@ -16,7 +16,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hello! I'm Your Name, a passionate web developer with experience in creating engaging and responsive websites. 
+                Hello! c0rn3d, a passionate web developer with experience in creating engaging and responsive websites. 
                 I specialize in front-end development and have a keen eye for design. 
                 Welcome to my portfolio website!
             </p>
@@ -24,7 +24,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 c0rn3d. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
