Changes to index.html and script.js files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 Welcome to my portfolio website!
             </p>
         </section>
+		<section id="greeting">
+			<h2>Welcome!</h2>
+			<p id="date-time"></p>
+		</section>
     </main>
     
     <footer>
