Added setIntervakl to script.js file, and commented out meta tag in index,html file to not refresh from html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c0rn3d - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-	<meta http-equiv="refresh" content="1"> <!-- Refreshes the page every 1 second -->
+<!--	<meta http-equiv="refresh" content="1">Refreshes the page every 1 second -->
 </head>
 <body>
     <header>
