changes to script.js file and index.html file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<h2>Welcome!</h2>
 			<p id="date-time"></p>
 		</section>
+		<section id="quote-section"><p id="quote"></p></section>
     </main>
     
     <footer>
